--- a/deliverables/pike/kolla-ansible.yaml
+++ b/deliverables/pike/kolla-ansible.yaml
@@ -19,3 +19,7 @@ releases:
     projects:
       - repo: openstack/kolla-ansible
         hash: 9a520e09060bb6be00741a114a87fde31d410fa1
+  - version: 5.0.0.0rc2
+    projects:
+      - repo: openstack/kolla-ansible
+        hash: e98d0863638779dba683da1e0e1cf623fb773c19
