--- a/deliverables/_independent/pymod2pkg.yaml
+++ b/deliverables/_independent/pymod2pkg.yaml
@@ -95,3 +95,7 @@ releases:
     projects:
       - repo: openstack/pymod2pkg
         hash: 3e85d9340c7dc5048b59ccf07c7edc9d9dac67b9
+  - version: 0.10.0
+    projects:
+      - repo: openstack/pymod2pkg
+        hash: b06c67d1976d73a765b4b8c60d5d7376c89bb58c
