--- a/deliverables/pike/python-manilaclient.yaml
+++ b/deliverables/pike/python-manilaclient.yaml
@@ -23,5 +23,9 @@ releases:
       - hash: 502eb756cc724442c17e553bc4ee3f6c629ea4d1
         repo: openstack/python-manilaclient
     version: 1.17.1
+  - projects:
+      - hash: 52e3cb17290747e110798e3185ade79e4c11344f
+        repo: openstack/python-manilaclient
+    version: 1.17.2
 team: manila
 type: library
