manila-ui stable/pike 2.10.2 release
Bug fixes.

Change-Id: I2c18bebfced7f5aa0520625a207e31869721cb91

--- a/deliverables/pike/manila-ui.yaml
+++ b/deliverables/pike/manila-ui.yaml
@@ -21,6 +21,10 @@ releases:
     projects:
       - repo: openstack/manila-ui
         hash: 019f6b4e630232d398a595990d29524d8295028f
+  - version: 2.10.2
+    projects:
+      - repo: openstack/manila-ui
+        hash: e5e86282337ecf4c34c6bcd8d2569a4f9c8ed42f
 branches:
   - location: 2.10.1
     name: stable/pike
