--- a/deliverables/pike/swift.yaml
+++ b/deliverables/pike/swift.yaml
@@ -7,6 +7,9 @@ type: service
 branches:
   - name: stable/pike
     location: 2.15.1
+  - name: feature/deep
+    location:
+      openstack/swift: 21a0df4ae0e080fd9b13207dec20fb55f0b595e5
 releases:
   - version: 2.14.0
     projects:
