update swift release notes links
Change-Id: I35a486fc278b2bfc29bd5eaec343a5faa1525362

--- a/deliverables/queens/swift.yaml
+++ b/deliverables/queens/swift.yaml
@@ -1,5 +1,6 @@
 ---
 launchpad: swift
 release-model: cycle-with-intermediary
+release-notes: https://docs.openstack.org/releasenotes/swift/current.html
 team: swift
 type: service
