pike final releases for cycle-trailing projects
Change-Id: I9c0bccda766664ee520e6c95622ccf451d414883
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/deliverables/pike/kolla-ansible.yaml
+++ b/deliverables/pike/kolla-ansible.yaml
@@ -23,3 +23,8 @@ releases:
     projects:
       - repo: openstack/kolla-ansible
         hash: e98d0863638779dba683da1e0e1cf623fb773c19
+  - diff-start: 4.0.0.0rc1
+    projects:
+      - repo: openstack/kolla-ansible
+        hash: e98d0863638779dba683da1e0e1cf623fb773c19
+    version: 5.0.0
