--- a/deliverables/pike/kolla.yaml
+++ b/deliverables/pike/kolla.yaml
@@ -23,3 +23,8 @@ releases:
     projects:
       - repo: openstack/kolla
         hash: b229f8ef9ad0799f9823475f0864a9a47ccc7a62
+  - diff-start: 4.0.0.0rc1
+    projects:
+      - repo: openstack/kolla
+        hash: b229f8ef9ad0799f9823475f0864a9a47ccc7a62
+    version: 5.0.0
