--- a/deliverables/pike/tripleo-image-elements.yaml
+++ b/deliverables/pike/tripleo-image-elements.yaml
@@ -25,5 +25,10 @@ releases:
       - hash: 526772d36e92ee25f62077f056e7575aedcd9833
         repo: openstack/tripleo-image-elements
     version: 7.0.0.0rc2
+  - diff-start: 6.0.0.0rc1
+    projects:
+      - hash: 526772d36e92ee25f62077f056e7575aedcd9833
+        repo: openstack/tripleo-image-elements
+    version: 7.0.0
 team: tripleo
 type: other
