--- a/deliverables/pike/tripleo-heat-templates.yaml
+++ b/deliverables/pike/tripleo-heat-templates.yaml
@@ -25,5 +25,10 @@ releases:
       - hash: 896517755b917a5018e6529100d2cda5487a35d9
         repo: openstack/tripleo-heat-templates
     version: 7.0.0.0rc2
+  - diff-start: 6.0.0.0rc1
+    projects:
+      - hash: 896517755b917a5018e6529100d2cda5487a35d9
+        repo: openstack/tripleo-heat-templates
+    version: 7.0.0
 team: tripleo
 type: other
