--- a/deliverables/pike/tripleo-puppet-elements.yaml
+++ b/deliverables/pike/tripleo-puppet-elements.yaml
@@ -25,5 +25,10 @@ releases:
       - hash: 2094778336bffb245cb4250d5b5418c79cb7486a
         repo: openstack/tripleo-puppet-elements
     version: 7.0.0.0rc2
+  - diff-start: 6.0.0.0rc1
+    projects:
+      - hash: 2094778336bffb245cb4250d5b5418c79cb7486a
+        repo: openstack/tripleo-puppet-elements
+    version: 7.0.0
 team: tripleo
 type: other
