--- a/deliverables/_independent/renderspec.yaml
+++ b/deliverables/_independent/renderspec.yaml
@@ -39,3 +39,7 @@ releases:
     projects:
       - repo: openstack/renderspec
         hash: c0df0c06328292377bc7ccc2ad4927afc8330c11
+  - version: 1.7.0
+    projects:
+      - repo: openstack/renderspec
+        hash: 2a0409abd6072aa9fb19869422d43652f4811f2b
