--- a/deliverables/_independent/pymod2pkg.yaml
+++ b/deliverables/_independent/pymod2pkg.yaml
@@ -99,3 +99,7 @@ releases:
     projects:
       - repo: openstack/pymod2pkg
         hash: b06c67d1976d73a765b4b8c60d5d7376c89bb58c
+  - version: 0.10.1
+    projects:
+      - repo: openstack/pymod2pkg
+        hash: a5858acd900ac765c31d2f060c41afca9df5111e
