Add oslo releases for queens Sept 19, 2017
Change-Id: I6e2a3dc6f39d7be78ac3aa05aade7d0f2cb2e103

--- a/deliverables/queens/castellan.yaml
+++ b/deliverables/queens/castellan.yaml
@@ -8,3 +8,7 @@ releases:
     projects:
       - repo: openstack/castellan
         hash: 6fe37f79a4eb40814ecde9a5b35cdc0d09a68665
+  - projects:
+      - hash: 44ea22891d6707fcf3c55517a6adf33c13e2a913
+        repo: openstack/castellan
+    version: 0.14.0
