--- a/deliverables/queens/oslo.context.yaml
+++ b/deliverables/queens/oslo.context.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/oslo.context
         hash: b1bbc6906ca66d830afc0e42b8c66c753a35ca43
+  - projects:
+      - hash: 15a6c74bf5e6fb0136dda5b837c67a8ab57a6eea
+        repo: openstack/oslo.context
+    version: 2.18.1
