--- a/deliverables/queens/oslo.db.yaml
+++ b/deliverables/queens/oslo.db.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/oslo.db
         hash: e9a9701d54ea1b708e7fc3ef68e75eb288059632
+  - projects:
+      - hash: 4de33ebd504a2c3dbddc2492bdb96ae7bca77d66
+        repo: openstack/oslo.db
+    version: 4.27.0
