--- a/deliverables/queens/oslo.messaging.yaml
+++ b/deliverables/queens/oslo.messaging.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/oslo.messaging
         hash: ba30a3067d7db81cc864ae9e52b2761df44efddd
+  - projects:
+      - hash: 393ecff3451091404832dd6b8a088e1bec760101
+        repo: openstack/oslo.messaging
+    version: 5.32.0
