--- a/deliverables/queens/oslo.policy.yaml
+++ b/deliverables/queens/oslo.policy.yaml
@@ -9,3 +9,7 @@ releases:
       - hash: cc30bf7466ade78d39a27037b0b49ee235a89ad3
         repo: openstack/oslo.policy
     version: 1.26.0
+  - projects:
+      - hash: e9d5557134da3cd356c9226cbffe4f2521dbe80d
+        repo: openstack/oslo.policy
+    version: 1.27.0
