--- a/deliverables/queens/oslosphinx.yaml
+++ b/deliverables/queens/oslosphinx.yaml
@@ -4,3 +4,8 @@ launchpad: oslosphinx
 release-model: cycle-with-intermediary
 team: oslo
 type: library
+releases:
+  - projects:
+      - hash: 435f32cba2ae8029e8f45afea811e269b1a4c78f
+        repo: openstack/oslosphinx
+    version: 4.16.0
