--- a/deliverables/queens/osprofiler.yaml
+++ b/deliverables/queens/osprofiler.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/osprofiler
         hash: de34c0d29e2a85396a9ff67dd022240043e1214e
+  - projects:
+      - hash: 8161744ca7dc06d5e08b0da1c6861822c0dae467
+        repo: openstack/osprofiler
+    version: 1.13.0
