--- a/deliverables/newton/puppet-horizon.yaml
+++ b/deliverables/newton/puppet-horizon.yaml
@@ -36,3 +36,7 @@ releases:
     projects:
       - repo: openstack/puppet-horizon
         hash: c53f2b65f8fbdd2f90aafc29563e44de07b68c98
+  - version: 9.6.0
+    projects:
+      - repo: openstack/puppet-horizon
+        hash: 938bcf8b01095d3e6d6d42c9198cf3895846d83a
