--- a/deliverables/ocata/puppet-horizon.yaml
+++ b/deliverables/ocata/puppet-horizon.yaml
@@ -28,3 +28,7 @@ releases:
     projects:
       - repo: openstack/puppet-horizon
         hash: 8a0282c7d6fa763833118188403b25a00c7e5df5
+  - version: 10.4.0
+    projects:
+      - repo: openstack/puppet-horizon
+        hash: d6d13d6766754a6d5b6a7136d3c80087c4bb2222
