--- a/deliverables/pike/ironic.yaml
+++ b/deliverables/pike/ironic.yaml
@@ -24,3 +24,7 @@ releases:
     projects:
       - repo: openstack/ironic
         hash: 40fa86a5e28816ebf9f0867e46521ffef5f0aae1
+  - projects:
+      - hash: feb64c2a5837081789b7d3cbe67dd437f0b20f1e
+        repo: openstack/ironic
+    version: 9.1.1
