--- a/deliverables/pike/python-ironicclient.yaml
+++ b/deliverables/pike/python-ironicclient.yaml
@@ -31,5 +31,9 @@ releases:
       - hash: cdff7a0712c3947ff98d6a8d7975c8477f8317ba
         repo: openstack/python-ironicclient
     version: 1.17.0
+  - projects:
+      - hash: 92107cf50e75f98c13becf6171fb43249b2f1dfd
+        repo: openstack/python-ironicclient
+    version: 1.17.1
 team: ironic
 type: library
