--- a/deliverables/ocata/ironic.yaml
+++ b/deliverables/ocata/ironic.yaml
@@ -20,3 +20,7 @@ releases:
     projects:
       - repo: openstack/ironic
         hash: bb3da02fbdd9bf8b2aa9707260a716f0469b1748
+  - projects:
+      - hash: dfa2fb6dcd4e5030d5e1cac52ddbf43c9a181950
+        repo: openstack/ironic
+    version: 7.0.3
