--- a/deliverables/ocata/python-ironicclient.yaml
+++ b/deliverables/ocata/python-ironicclient.yaml
@@ -29,3 +29,7 @@ releases:
     projects:
       - repo: openstack/python-ironicclient
         hash: 7094cb1138a73350466768e0b1fd1538c61594e3
+  - projects:
+      - hash: d73ddeda1b7836518e540c89b91a1b6ff29f5068
+        repo: openstack/python-ironicclient
+    version: 1.11.2
