Add Glance-specific dates to release timeline.
Change-Id: I573780f4e5eea9ff9b43ad533569c6a24e3beafc

--- a/doc/source/queens/schedule.yaml
+++ b/doc/source/queens/schedule.yaml
@@ -21,9 +21,13 @@ cycle:
 - end: '2017-09-29'
   name: R-22
   start: '2017-09-25'
+  project-specific:
+  - q-glance-spec-proposal-freeze
 - end: '2017-10-06'
   name: R-21
   start: '2017-10-02'
+  project-specific:
+  - q-glance-spec-freeze
 - end: '2017-10-13'
   name: R-20
   start: '2017-10-09'
