New release 9.6.0 for puppet-aodh (newton)
It includes https://review.openstack.org/#/c/453431 which adds hooks
for external install and svc management.

Change-Id: I7876008d1efb23abe44d852db7b27d1070e221c1

--- a/deliverables/newton/puppet-aodh.yaml
+++ b/deliverables/newton/puppet-aodh.yaml
@@ -36,3 +36,7 @@ releases:
     projects:
       - repo: openstack/puppet-aodh
         hash: 0ec76c62a3039f68630184486ccbf27c12f3dbbb
+  - version: 9.6.0
+    projects:
+      - repo: openstack/puppet-aodh
+        hash: 3182b9276618b70d1b8aa5f50c1918adf96bfc0a
