--- a/deliverables/queens/ovsdbapp.yaml
+++ b/deliverables/queens/ovsdbapp.yaml
@@ -8,3 +8,7 @@ releases:
     projects:
       - repo: openstack/ovsdbapp
         hash: 55f770c4c2a49deeb5c54984fb7447f1b66ae993
+  - version: 0.6.0
+    projects:
+      - repo: openstack/ovsdbapp
+        hash: 0b86d12d84c267464153bee387269fc074ee7d94
