--- a/deliverables/pike/neutron-fwaas.yaml
+++ b/deliverables/pike/neutron-fwaas.yaml
@@ -30,6 +30,13 @@ releases:
       - hash: 2c47f7122c6eb96d8eb550fd573f4d87aea0e2ad
         repo: openstack/neutron-fwaas
     version: 11.0.0
+  - projects:
+      - hash: 352dce5cc2cdbcf033c67b7f5ac6d5ed9c2702c5
+        repo: openstack/neutron-fwaas
+    version: 11.0.1
+    highlights: |-
+      * Fix router update on L3 agent restart
+      * Update policy on rule addition/removal
 branches:
   - location: 11.0.0.0rc1
     name: stable/pike
