[newton] Add deadlines applicable during the Queens cycle
Change-Id: Ie22774e5d7dce8eb86c1e527d8244e85e18a4daf

--- a/doc/source/queens/schedule.yaml
+++ b/doc/source/queens/schedule.yaml
@@ -23,6 +23,8 @@ cycle:
   start: '2017-09-25'
   project-specific:
   - q-glance-spec-proposal-freeze
+  x-project:
+  - n-final-library-releases
 - end: '2017-10-06'
   name: R-21
   start: '2017-10-02'
@@ -31,6 +33,8 @@ cycle:
 - end: '2017-10-13'
   name: R-20
   start: '2017-10-09'
+  x-project:
+  - n-eol
 - end: '2017-10-20'
   name: R-19
   start: '2017-10-16'
