Update octavia deliverables for storyboard
Octavia projects have migrated to storyboard. This patch updates the
deliverables to use the storyboard project instead of the launchpad
project.

Change-Id: Ia30a4ca9f6679c549f48300fa9ed5d7a31f12619

--- a/deliverables/queens/neutron-lbaas-dashboard.yaml
+++ b/deliverables/queens/neutron-lbaas-dashboard.yaml
@@ -1,6 +1,6 @@
 ---
 include-pypi-link: yes
-launchpad: neutron-lbaas-dashboard
+storyboard: 907
 release-model: cycle-with-milestones
 team: octavia
 type: horizon-plugin
