--- a/deliverables/queens/octavia.yaml
+++ b/deliverables/queens/octavia.yaml
@@ -1,6 +1,6 @@
 ---
 include-pypi-link: yes
-launchpad: octavia
+storyboard: 908
 release-model: cycle-with-milestones
 team: octavia
 type: service
