--- a/deliverables/queens/python-octaviaclient.yaml
+++ b/deliverables/queens/python-octaviaclient.yaml
@@ -1,6 +1,6 @@
 ---
 include-pypi-link: yes
-launchpad: octavia
+storyboard: 911
 release-model: cycle-with-intermediary
 team: octavia
 type: library
