Add oslo releases for stable/ocata Sept 25, 2017
Change-Id: Ic8aaf10177236fcaff677a0d5a650073a05db5c9

--- a/deliverables/ocata/oslo.middleware.yaml
+++ b/deliverables/ocata/oslo.middleware.yaml
@@ -34,3 +34,7 @@ releases:
     projects:
       - repo: openstack/oslo.middleware
         hash: 662f76a909325a2990c991b3d4bffcd0a78d3bdb
+  - projects:
+      - hash: 74208402c6cadc0fb46379e2f7122eade7998883
+        repo: openstack/oslo.middleware
+    version: 3.23.3
