--- a/deliverables/ocata/oslo.serialization.yaml
+++ b/deliverables/ocata/oslo.serialization.yaml
@@ -21,3 +21,7 @@ releases:
     projects:
       - repo: openstack/oslo.serialization
         hash: ac5787d0e42ba6aa1c26d2e040c9f0a1ca8cb575
+  - projects:
+      - hash: be828c35d84f8f10b07f11aa8bbf195a44e730f8
+        repo: openstack/oslo.serialization
+    version: 2.16.1
