Add oslo releases for queens Sept 25, 2017
Change-Id: I3d18b4891298a44498e4a9558b4a2bd461f1961e

--- a/deliverables/queens/automaton.yaml
+++ b/deliverables/queens/automaton.yaml
@@ -4,3 +4,8 @@ launchpad: automaton
 release-model: cycle-with-intermediary
 team: oslo
 type: library
+releases:
+  - projects:
+      - hash: 0820ec002f88b8385d1e6a33b583c006dd64d57f
+        repo: openstack/automaton
+    version: 1.13.0
