--- a/deliverables/queens/futurist.yaml
+++ b/deliverables/queens/futurist.yaml
@@ -4,3 +4,8 @@ launchpad: futurist
 release-model: cycle-with-intermediary
 team: oslo
 type: library
+releases:
+  - projects:
+      - hash: 32649363fe66ba2ebb8275a77a1856d884c4ffee
+        repo: openstack/futurist
+    version: 1.4.0
