--- a/deliverables/queens/oslo.concurrency.yaml
+++ b/deliverables/queens/oslo.concurrency.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/oslo.concurrency
         hash: a7d35ccd812a48dcb7f84bba618da3b1a291beac
+  - projects:
+      - hash: 79e27173debb8d8e4694463cc121ca6528421393
+        repo: openstack/oslo.concurrency
+    version: 3.23.0
