--- a/deliverables/queens/oslo.config.yaml
+++ b/deliverables/queens/oslo.config.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/oslo.config
         hash: 7fde851f8dc7ab0a4b796c2bba0e166f226e7674
+  - projects:
+      - hash: e6749d3208cffd7693353385f92865d9ac737623
+        repo: openstack/oslo.config
+    version: 4.13.0
