--- a/deliverables/queens/oslo.context.yaml
+++ b/deliverables/queens/oslo.context.yaml
@@ -13,3 +13,7 @@ releases:
       - hash: 15a6c74bf5e6fb0136dda5b837c67a8ab57a6eea
         repo: openstack/oslo.context
     version: 2.18.1
+  - projects:
+      - hash: 8c7a18fc55c78d97b9bd7781261fd7ae2b69dd36
+        repo: openstack/oslo.context
+    version: 2.19.0
