--- a/deliverables/queens/oslo.db.yaml
+++ b/deliverables/queens/oslo.db.yaml
@@ -13,3 +13,7 @@ releases:
       - hash: 4de33ebd504a2c3dbddc2492bdb96ae7bca77d66
         repo: openstack/oslo.db
     version: 4.27.0
+  - projects:
+      - hash: ca72b340b5ddbf54ccb7e7fe0a829acc93a71672
+        repo: openstack/oslo.db
+    version: 4.28.0
