--- a/deliverables/queens/oslo.middleware.yaml
+++ b/deliverables/queens/oslo.middleware.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/oslo.middleware
         hash: 8812bc3fc490f0db4977418eaedf58190a0df394
+  - projects:
+      - hash: cd460e07818fe0921c239ac8bbe4b66860269ac9
+        repo: openstack/oslo.middleware
+    version: 3.32.0
