--- a/deliverables/queens/oslo.policy.yaml
+++ b/deliverables/queens/oslo.policy.yaml
@@ -13,3 +13,7 @@ releases:
       - hash: e9d5557134da3cd356c9226cbffe4f2521dbe80d
         repo: openstack/oslo.policy
     version: 1.27.0
+  - projects:
+      - hash: 7b1a6c16bd5ddbb79cc5c8d343a77be1b13a5609
+        repo: openstack/oslo.policy
+    version: 1.28.0
