--- a/deliverables/queens/oslo.serialization.yaml
+++ b/deliverables/queens/oslo.serialization.yaml
@@ -4,3 +4,8 @@ launchpad: oslo.serialization
 release-model: cycle-with-intermediary
 team: oslo
 type: library
+releases:
+  - projects:
+      - hash: 780a027dfd32f92c8cda8d24d145c59a47def6b0
+        repo: openstack/oslo.serialization
+    version: 2.21.0
