--- a/deliverables/queens/oslo.utils.yaml
+++ b/deliverables/queens/oslo.utils.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/oslo.utils
         hash: 4356cb7b50f7cfe10afb67f196079e3d283545f0
+  - projects:
+      - hash: 04daafefc151f53304e8e92536afc64bc3fb757c
+        repo: openstack/oslo.utils
+    version: 3.30.0
