--- a/deliverables/queens/oslotest.yaml
+++ b/deliverables/queens/oslotest.yaml
@@ -9,3 +9,7 @@ releases:
       - hash: 77b7a18d003c99abe9c8be0f57830f78ccd55d85
         repo: openstack/oslotest
     version: 2.18.0
+  - projects:
+      - hash: eb544da5a8b9c92a21d2da31d58c127e28b8df10
+        repo: openstack/oslotest
+    version: 2.18.1
