--- a/deliverables/queens/stevedore.yaml
+++ b/deliverables/queens/stevedore.yaml
@@ -9,3 +9,7 @@ releases:
       - hash: 95f3944a60fff415ff914fff11517333287927a4
         repo: openstack/stevedore
     version: 1.26.0
+  - projects:
+      - hash: 97ecf51a6b3461917ca732a8695b62c41d29e20d
+        repo: openstack/stevedore
+    version: 1.27.0
