--- a/deliverables/queens/taskflow.yaml
+++ b/deliverables/queens/taskflow.yaml
@@ -9,3 +9,7 @@ releases:
       - hash: f9065c4d97b99b33c2e2299f236b9c6cfe100d29
         repo: openstack/taskflow
     version: 2.15.0
+  - projects:
+      - hash: a121be0ac2e53ecda9f0e189646a9ee5edd39a80
+        repo: openstack/taskflow
+    version: 2.16.0
