Add oslo releases for stable/pike Sept 25, 2017
Change-Id: I52ee03f0aa1dabd9cbe9c366f8e9e7f4e2f208b9

--- a/deliverables/pike/oslo.concurrency.yaml
+++ b/deliverables/pike/oslo.concurrency.yaml
@@ -19,5 +19,9 @@ releases:
       - hash: 88583edbb478c1a157b58c95c231a0b5a741b78a
         repo: openstack/oslo.concurrency
     version: 3.21.0
+  - projects:
+      - hash: 8adf9b1f0d69dca7372b967ef4f894487f1a9d64
+        repo: openstack/oslo.concurrency
+    version: 3.21.1
 team: oslo
 type: library
