--- a/deliverables/pike/oslo.config.yaml
+++ b/deliverables/pike/oslo.config.yaml
@@ -67,5 +67,9 @@ releases:
       - hash: dfc70fa88e01b8c6ca1ab15a4b80bd33e87ced85
         repo: openstack/oslo.config
     version: 4.11.0
+  - projects:
+      - hash: fb0738974824af6e1bc7d9fdf32a7c1d3ebf65fb
+        repo: openstack/oslo.config
+    version: 4.11.1
 team: oslo
 type: library
