--- a/deliverables/pike/oslo.middleware.yaml
+++ b/deliverables/pike/oslo.middleware.yaml
@@ -43,5 +43,9 @@ releases:
       - hash: 1cf39ee5c3739c18fed78946532438550f56356f
         repo: openstack/oslo.middleware
     version: 3.30.0
+  - projects:
+      - hash: d9ad4bae1e0d6c43a009d393ac94f7ff50116171
+        repo: openstack/oslo.middleware
+    version: 3.30.1
 team: oslo
 type: library
