--- a/deliverables/pike/automaton.yaml
+++ b/deliverables/pike/automaton.yaml
@@ -27,5 +27,9 @@ releases:
       - hash: d34d15737f8edefe69f9b6970f83cf63a3fd6d87
         repo: openstack/automaton
     version: 1.12.0
+  - projects:
+      - hash: 0028da7f23a16f1c9d7f31026fec0b012ace3593
+        repo: openstack/automaton
+    version: 1.12.1
 team: oslo
 type: library
