--- a/deliverables/pike/debtcollector.yaml
+++ b/deliverables/pike/debtcollector.yaml
@@ -31,5 +31,9 @@ releases:
       - hash: cd6ba6b1224e527c36e976a25c0e06d311ebb2d9
         repo: openstack/debtcollector
     version: 1.17.0
+  - projects:
+      - hash: 28d2552da901916db05be4ee79171f26fde69a76
+        repo: openstack/debtcollector
+    version: 1.17.1
 team: oslo
 type: library
