--- a/deliverables/newton/instack-undercloud.yaml
+++ b/deliverables/newton/instack-undercloud.yaml
@@ -50,5 +50,9 @@ releases:
       - hash: e9a5137e7e4c0f88c9cb44e60d311a7604470652
         repo: openstack/instack-undercloud
     version: 5.3.1
+  - projects:
+      - hash: 808c89b9247b0570f32a67b88d102790445ebee5
+        repo: openstack/instack-undercloud
+    version: 5.3.2
 team: tripleo
 type: other
