--- a/deliverables/newton/puppet-tripleo.yaml
+++ b/deliverables/newton/puppet-tripleo.yaml
@@ -53,5 +53,9 @@ releases:
       - hash: 1035f332e72d8351bc8f733de1ab741bc9b54974
         repo: openstack/puppet-tripleo
     version: 5.6.2
+  - projects:
+      - hash: 68387265325594d12b6404f86297ba147a115be0
+        repo: openstack/puppet-tripleo
+    version: 5.6.3
 team: tripleo
 type: other
