--- a/deliverables/newton/tripleo-heat-templates.yaml
+++ b/deliverables/newton/tripleo-heat-templates.yaml
@@ -50,5 +50,9 @@ releases:
       - hash: a33d7dde36e7a419cd1aef9ddb72b05bdbc77f98
         repo: openstack/tripleo-heat-templates
     version: 5.3.1
+  - projects:
+      - hash: 640367a18385c93a98e70f4e4161bdbafe66a4eb
+        repo: openstack/tripleo-heat-templates
+    version: 5.3.2
 team: tripleo
 type: other
