--- a/deliverables/newton/tripleo-ui.yaml
+++ b/deliverables/newton/tripleo-ui.yaml
@@ -37,5 +37,9 @@ releases:
       - hash: 7cbf49c29ada81a044bb22da24186a3bf113aca4
         repo: openstack/tripleo-ui
     version: 1.2.0
+  - projects:
+      - hash: 468faeef9755a9c76f384bd91703e33eaed8a3d6
+        repo: openstack/tripleo-ui
+    version: 1.2.1
 team: tripleo
 type: other
