--- a/deliverables/ocata/puppet-tripleo.yaml
+++ b/deliverables/ocata/puppet-tripleo.yaml
@@ -34,5 +34,9 @@ releases:
       - hash: 406ef10fa59b3f9566a7a3306e8b93077a612280
         repo: openstack/puppet-tripleo
     version: 6.5.1
+  - projects:
+      - hash: 3ecd35c4b9edbb0780e2dc43a0c6633d69f55286
+        repo: openstack/puppet-tripleo
+    version: 6.5.2
 team: tripleo
 type: other
