--- a/deliverables/ocata/tripleo-common.yaml
+++ b/deliverables/ocata/tripleo-common.yaml
@@ -34,5 +34,9 @@ releases:
       - hash: 6a939cb99414609940d4076223faa77537c09e4a
         repo: openstack/tripleo-common
     version: 6.1.1
+  - projects:
+      - hash: a96721ad721e400f474b2032022f930a2d2a6cf4
+        repo: openstack/tripleo-common
+    version: 6.1.2
 team: tripleo
 type: other
