--- a/deliverables/ocata/tripleo-puppet-elements.yaml
+++ b/deliverables/ocata/tripleo-puppet-elements.yaml
@@ -39,5 +39,9 @@ releases:
       - hash: 8582a2941804cdc7a89c0c12e0b16a4638b167aa
         repo: openstack/tripleo-puppet-elements
     version: 6.2.1
+  - projects:
+      - hash: 95348c9c0cb337507cc8bb836009d8895eef141d
+        repo: openstack/tripleo-puppet-elements
+    version: 6.2.2
 team: tripleo
 type: other
