--- a/deliverables/ocata/tripleo-ui.yaml
+++ b/deliverables/ocata/tripleo-ui.yaml
@@ -30,5 +30,9 @@ releases:
       - hash: 10dcc3654c0cef769e7dfa671cd3bee8a7ae8ee6
         repo: openstack/tripleo-ui
     version: 3.2.1
+  - projects:
+      - hash: 0bc29b03d7efc323191cfbb1a6196c92eb5f2109
+        repo: openstack/tripleo-ui
+    version: 3.2.2
 team: tripleo
 type: other
