--- a/deliverables/ocata/tripleo-heat-templates.yaml
+++ b/deliverables/ocata/tripleo-heat-templates.yaml
@@ -39,5 +39,9 @@ releases:
       - hash: cea4908c970a9e12101f72576141b76beca84713
         repo: openstack/tripleo-heat-templates
     version: 6.2.1
+  - projects:
+      - hash: 715738eac8ed0301ddc7e1c60e6d00c283f01e63
+        repo: openstack/tripleo-heat-templates
+    version: 6.2.2
 team: tripleo
 type: other
