--- a/deliverables/pike/instack.yaml
+++ b/deliverables/pike/instack.yaml
@@ -6,6 +6,10 @@ releases:
       - hash: ec102b19a029d0ca7fcf1267656256b4023cf57e
         repo: openstack/instack
     version: 7.0.0
+  - projects:
+      - hash: d0b15e2d983de5f2517034a96ae001073e32639e
+        repo: openstack/instack
+    version: 7.0.1
 team: tripleo
 type: library
 branches:
