--- a/deliverables/pike/python-tripleoclient.yaml
+++ b/deliverables/pike/python-tripleoclient.yaml
@@ -21,6 +21,10 @@ releases:
       - hash: 968a4da05efdcf31eab4a3327f730ec2307df384
         repo: openstack/python-tripleoclient
     version: 7.3.0
+  - projects:
+      - hash: 1023935291d18a0e8389f41da7b6b86911ac27bf
+        repo: openstack/python-tripleoclient
+    version: 7.3.1
 team: tripleo
 type: library
 release-notes: https://docs.openstack.org/releasenotes/python-tripleoclient/pike.html
