--- a/deliverables/pike/tripleo-common.yaml
+++ b/deliverables/pike/tripleo-common.yaml
@@ -37,5 +37,9 @@ releases:
       - hash: ec4ef24d9186a96d17594766cb95f83a50cf0ce8
         repo: openstack/tripleo-common
     version: 7.6.0
+  - projects:
+      - hash: f30cc7a5e71adee77bb7ab8769798342462671b2
+        repo: openstack/tripleo-common
+    version: 7.6.1
 team: tripleo
 type: other
