--- a/deliverables/pike/tripleo-ui.yaml
+++ b/deliverables/pike/tripleo-ui.yaml
@@ -25,5 +25,9 @@ releases:
       - hash: 7a7c19b4b8c108b5a268421d7c114e027fe57732
         repo: openstack/tripleo-ui
     version: 7.4.0
+  - projects:
+      - hash: 2bb5965b9e3f28c1f09ee1b2db8052c86dd4e1f4
+        repo: openstack/tripleo-ui
+    version: 7.4.1
 team: tripleo
 type: other
