--- a/deliverables/newton/python-monascaclient.yaml
+++ b/deliverables/newton/python-monascaclient.yaml
@@ -16,3 +16,7 @@ releases:
     projects:
       - repo: openstack/python-monascaclient
         hash: cd03d21b061c1f3b87a847a566becaf143fdca40
+  - projects:
+      - hash: cb93343447ec7ee88b4a461990b250d9e926925c
+        repo: openstack/python-monascaclient
+    version: 1.2.1
