Add tooz release for stable/newton
This may be the last release of stable/newton for oslo libraries.

Change-Id: I4b6c1b69f7969577cb5d37623cbea17fb142217b

--- a/deliverables/newton/tooz.yaml
+++ b/deliverables/newton/tooz.yaml
@@ -58,3 +58,7 @@ releases:
     projects:
       - repo: openstack/tooz
         hash: bc11f09b831dd5811d42f4845117aea2581c194e
+  - version: 1.43.2
+    projects:
+      - hash: 5a6294d8aaca7dc0cb749be5f1991f2c3b35e4e4
+        repo: openstack/tooz
