--- a/deliverables/ocata/openstack-ansible.yaml
+++ b/deliverables/ocata/openstack-ansible.yaml
@@ -1178,3 +1178,81 @@ releases:
         hash: a7d4b0df2e9ed3c2a1414613e96c7c9db0f2db60
       - repo: openstack/openstack-ansible-os_designate
         hash: 2d1d0a75fb30b95588b943cfa3e7c830004999f4
+  - version: 15.1.9
+    projects:
+      - repo: openstack/openstack-ansible
+        hash: 031317a83c00b07394e6002659827ef20e9dda24
+      - repo: openstack/ansible-hardening
+        hash: 957c0bc39680118862a8aab66a189041827590b5
+      - repo: openstack/openstack-ansible-apt_package_pinning
+        hash: d5c0d7e8d21fc1539cc043097e23851296e2dd95
+      - repo: openstack/openstack-ansible-pip_install
+        hash: 767b923ba94df9ce067d7d782c1ea40bf423d764
+      - repo: openstack/openstack-ansible-galera_client
+        hash: abf0fe82fdfec45d3680fbf4b13c9ba26d685e0f
+      - repo: openstack/openstack-ansible-galera_server
+        hash: 21aed2dde52c29cb550707658bb9a2260d076f61
+      - repo: openstack/openstack-ansible-ceph_client
+        hash: 3cb26707ace29be5fc1be631faf26e060cfb6ea5
+      - repo: openstack/openstack-ansible-haproxy_server
+        hash: 749d22fc362f2453088bccc5e4975c285643d410
+      - repo: openstack/openstack-ansible-lxc_container_create
+        hash: 258dad41ced7f9511d4e388470a759f46d9509fa
+      - repo: openstack/openstack-ansible-lxc_hosts
+        hash: fc561e5acef6d6aef40fff9c194252824981890e
+      - repo: openstack/openstack-ansible-memcached_server
+        hash: 53e845e54ebc3cabf71e6612eaef199325b1721b
+      - repo: openstack/openstack-ansible-openstack_hosts
+        hash: b3d55e49ff80eba6616b19ab6d99a2fc85aad85d
+      - repo: openstack/openstack-ansible-os_keystone
+        hash: dfb6fa3d84455f2e17b58db20e4bcf67efc014c9
+      - repo: openstack/openstack-ansible-openstack_openrc
+        hash: dfdf65b3db7c6240fa173a3a62af4e5028023626
+      - repo: openstack/openstack-ansible-os_aodh
+        hash: aebf86ae0dafae3876a6faab7a0c55010c055f53
+      - repo: openstack/openstack-ansible-os_barbican
+        hash: 91c62d5d2815bc53940e0048f7c9b65bd31e1a7d
+      - repo: openstack/openstack-ansible-os_ceilometer
+        hash: 1d709bd6eace68bfd7fb7d1e52df8d5b6f28810b
+      - repo: openstack/openstack-ansible-os_cinder
+        hash: efda0771083f23c7869e6a52585e8382f570a800
+      - repo: openstack/openstack-ansible-os_glance
+        hash: 802c3dcad5b9f578fdac969e327bfece75509ef2
+      - repo: openstack/openstack-ansible-os_gnocchi
+        hash: 6c3ffedc0e523163042cf167b1077ddc11136b4c
+      - repo: openstack/openstack-ansible-os_heat
+        hash: 87582ad58070ffb964f982749f71253e0f9148c4
+      - repo: openstack/openstack-ansible-os_horizon
+        hash: e4ff13c56a38707e08cfc00b6eb377b2469fb750
+      - repo: openstack/openstack-ansible-os_ironic
+        hash: b217195f8ae7a5a39eba7d633e625b0c3b0c63b1
+      - repo: openstack/openstack-ansible-os_magnum
+        hash: dfb38385242c9e7f8c04b4485d793055f892ee17
+      - repo: openstack/openstack-ansible-os_trove
+        hash: 93913b6af52bbf55d224b1b0b8ce53e3a8c84398
+      - repo: openstack/openstack-ansible-os_neutron
+        hash: 1608c0aca691afd6f7d2fad1265e006efa13ab2c
+      - repo: openstack/openstack-ansible-os_nova
+        hash: e6f2295b369b579633f89938fd48c7075ff789af
+      - repo: openstack/openstack-ansible-os_rally
+        hash: 190522159369ddfec4c8df72bb2a3da351cb841d
+      - repo: openstack/openstack-ansible-os_sahara
+        hash: 4a224f899fbbb68be31824a265fabcb92aa873a4
+      - repo: openstack/openstack-ansible-os_swift
+        hash: 0946e99dbdcde84a21d87a3876139bc31b6afbda
+      - repo: openstack/openstack-ansible-os_tempest
+        hash: 18dc9333cbbad6c4a22d7f9ddd4bb58fbf377a9e
+      - repo: openstack/openstack-ansible-plugins
+        hash: b4a5996c0e163bf39e399045d372e5877339a72b
+      - repo: openstack/openstack-ansible-rabbitmq_server
+        hash: f3389273c4795b55ccc800ef1fd977fba1ba0783
+      - repo: openstack/openstack-ansible-repo_build
+        hash: a40a69f81832484e9c9deb7a13f63f0d0283611d
+      - repo: openstack/openstack-ansible-repo_server
+        hash: 2c4a2b3ebd9ba4994b86250cf7b789ed8b09a8f6
+      - repo: openstack/openstack-ansible-rsyslog_client
+        hash: 5f5275720d13bd22945348751131c39877b731ab
+      - repo: openstack/openstack-ansible-rsyslog_server
+        hash: a7d4b0df2e9ed3c2a1414613e96c7c9db0f2db60
+      - repo: openstack/openstack-ansible-os_designate
+        hash: 2d1d0a75fb30b95588b943cfa3e7c830004999f4
