--- a/deliverables/pike/os-brick.yaml
+++ b/deliverables/pike/os-brick.yaml
@@ -35,5 +35,9 @@ releases:
       - repo: openstack/os-brick
         hash: 6eee11fc46205897bcd8d1eed5bfe319b504a6fa
     version: 1.15.2
+  - projects:
+      - hash: 68106be749971b9b7aa8e4bbfe5aee6a56857741
+        repo: openstack/os-brick
+    version: 1.15.3
 team: cinder
 type: library
